@startuml Review System

top to bottom direction
skinparam linetype ortho

class User
class Product
class SellerProfile
class SubOrder

class Review {
  id
  productRating
  sellerRating
  comment
}

User "1" -- "*" Review
Review "1" --> "1" SubOrder
Review "*" --> "1" Product
Review "*" --> "1" SellerProfile

@enduml